# gh-download

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pytest.yml  release.yml  update-readme.yml
gh_download/: __init__.py  cli.py  gh.py  rich.py
ghdl/: __init__.py
tests/: __init__.py  test_ghdl.py  test_minimal_retry.py  test_retry.py
